# PROTO-WORM

./: .gitignore  Cargo.toml  README.md  requirements.txt
cmd/fuzzer/: main.go
cmd/target-server/: main.go
mediator/: go.mod
mediator/cmd/capture_agent/: agent.go  main.go
mediator/pkg/api/: handlers.go
mediator/pkg/bpf_filter/: probe_loader.go  traffic_map.go
mediator/pkg/bpf_filter/bpf/: proto_worm_filter.c
mediator/pkg/db/: postgres.go
pkg/fuzzer-engine/: scheduler.go
pkg/proto/: engine.go
pkg/python-brain/src/: lstm_predictor.py  model.py  scorer.py
pkg/rust-analyzer/src/: lib.rs
pkg/rust-orchestrator/src/: storage.rs
proto/: worm.proto
research_harness/: requirements.txt
research_harness/analyzer/: cf_analyzer.py  symbolic_executor.py
worm_core/: Cargo.toml
worm_core/src/: lib.rs
worm_core/src/mutators/: bitflip_fuzz.rs  grammar_fuzz.rs  mod.rs  structure_fuzz.rs
worm_core/src/protocols/: iso8583.rs  mod.rs
worm_core/src/protocols/ot/: mod.rs  modbus.rs  s7comm_plus.rs
worm_core/src/protocols/xfs/: mod.rs  network_client.rs  state_v3.rs  xfs_engine.rs  xfs_messages.rs
