[package]
name = "worm_core"
version = "0.1.0"
edition = "2021"
authors = ["Security Research Team"]
description = "Protocol Reverse Engineering & Fuzzing Framework Core"

[lib]
name = "worm_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core dependencies
bytes = "1.5"
libc = "0.2"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"

# Parsing and binary analysis
nom = "7.1"
byteorder = "1.5"
goblin = "0.8"
capstone = "0.11"
elf = "0.7"
scroll = "0.12"

# Data structures and algorithms
petgraph = "0.6"
regex = "1.10"
indexmap = "2.1"

# Concurrency and performance
crossbeam = "0.8"
rayon = "1.8"
parking_lot = "0.12"

# Random number generation for state machine
rand = "0.8"

# FFI
cpython = { version = "0.7", optional = true }

[features]
default = []
python = ["cpython"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true
